deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdxp-campaign-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cdxp-campaign-service
  template:
    metadata:
      labels:
        name: cdxp-campaign-service
    spec:
      containers:
        - name: cdxp-campaign-service
          image: betalabsk8sacr.azurecr.io/cdxp/cdxp-campaign-service:0.1.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
